--- a/devel/py-progressbar/Makefile
+++ b/devel/py-progressbar/Makefile
@@ -1,4 +1,4 @@
-# $OpenBSD: Makefile,v 1.11 2016/01/26 13:05:26 sthen Exp $
+# $OpenBSD: Makefile,v 1.12 2016/01/26 13:29:11 sthen Exp $
 
 COMMENT =		text progressbar library for python
 
@@ -9,7 +9,6 @@ PKGNAME =		py-${DISTNAME}
 CATEGORIES =		devel
 
 HOMEPAGE =		https://github.com/niltonvolpato/python-progressbar
-MASTER_SITES =		https://python-progressbar.googlecode.com/files/
 
 MAINTAINER = 		Remi Pointel <rpointel@openbsd.org>
 
@@ -17,7 +16,11 @@ MAINTAINER = 		Remi Pointel <rpointel@openbsd.org>
 PERMIT_PACKAGE_CDROM =	Yes
 
 MODULES =		lang/python
-MODPY_SETUPTOOLS = Yes
+MODPY_SETUPTOOLS =	Yes
+
+# pypi distfile doesn't match the old googlecode one; switch if updating
+MASTER_SITES =		https://python-progressbar.googlecode.com/files/
+#MODPY_PI =		Yes
 
 NO_TEST =		Yes
 
