--- a/lang/gforth/Makefile
+++ b/lang/gforth/Makefile
@@ -1,24 +1,30 @@
-# $OpenBSD: Makefile,v 1.14 2016/01/26 08:26:43 jasper Exp $
+# $OpenBSD: Makefile,v 1.15 2016/01/26 22:24:58 jasper Exp $
 
 ONLY_FOR_ARCHS =	amd64 i386 mips64 mips64el powerpc sparc sparc64
 
-COMMENT =		ANS Standard Forth interpreter and compiler
+COMMENT =		ANSI/200x Forth interpreter and compiler
 
-V =			0.6.2
+V =			0.7.3
 DISTNAME =		gforth-${V}
-REVISION =		5
 CATEGORIES =		lang
 
-HOMEPAGE =		http://bernd-paysan.de/gforth.html
+HOMEPAGE =		http://www.gnu.org/software/gforth/
 
-# GPLv2+
+# GPLv3
 PERMIT_PACKAGE_CDROM =	Yes
 
 MASTER_SITES =		${MASTER_SITE_GNU:=gforth/}
 
-WANTLIB =		c m
+WANTLIB += avcall c callback ffi ltdl m pthread
 
+LIB_DEPENDS =		devel/ffcall \
+			devel/libffi \
+			devel/libtool,-ltdl
+
+# XXX: -pthread is added here while libffi.pc doesn't advocate it
 CONFIGURE_STYLE =	gnu
+CONFIGURE_ENV =		CPPFLAGS="-I/usr/local/include" \
+			LDFLAGS="-L/usr/local/lib -pthread"
 
 CFLAGS +=		-Dunix
 FAKE_FLAGS+=		DESTDIR="${WRKINST}"
@@ -41,6 +47,9 @@ ENDIAN =	b
 .else
 ENDIAN =	l
 .endif
+
+pre-configure:
+	${SUBST_CMD} ${WRKSRC}/envos.fs.in
 
 # Remove a bunch of unused and unneeded directories
 post-install:
