--- a/sysutils/salt/Makefile
+++ b/sysutils/salt/Makefile
@@ -1,4 +1,4 @@
-# $OpenBSD: Makefile,v 1.84 2015/12/02 09:29:55 ajacoutot Exp $
+# $OpenBSD: Makefile,v 1.85 2016/01/28 06:56:56 ajacoutot Exp $
 
 # optional dependencies
 # https://github.com/saltstack/salt/blob/develop/doc/conf.py#L42
@@ -15,7 +15,7 @@
 
 COMMENT =		remote execution and configuration management system
 
-MODPY_EGG_VERSION =	2015.8.3
+MODPY_EGG_VERSION =	2015.8.4
 DISTNAME =		salt-${MODPY_EGG_VERSION}
 
 CATEGORIES =		sysutils net devel
@@ -74,9 +74,9 @@ TEST_DEPENDS =		databases/py-mysql \
 			sysutils/salt-testing
 
 pre-configure:
-	perl -pi -e 's,share/man,man,g' ${WRKSRC}/setup.py
-	perl -pi -e 's,^#user: root,user: _salt,,' ${WRKSRC}/conf/{master,proxy}
-	perl -pi -e 's,^REQUIRED_OPEN_FILES.*,REQUIRED_OPEN_FILES = 512,,' \
+	sed -i 's,share/man,man,g' ${WRKSRC}/setup.py
+	sed -i 's,^#user: root,user: _salt,,' ${WRKSRC}/conf/{master,proxy}
+	sed -i 's,^REQUIRED_OPEN_FILES.*,REQUIRED_OPEN_FILES = 512,,' \
 		${WRKSRC}/tests/runtests.py
 
 post-install:
