--- a/lang/gforth/Makefile
+++ b/lang/gforth/Makefile
@@ -1,4 +1,4 @@
-# $OpenBSD: Makefile,v 1.16 2016/01/27 08:13:08 jasper Exp $
+# $OpenBSD: Makefile,v 1.17 2016/01/28 08:41:39 jasper Exp $
 
 ONLY_FOR_ARCHS =	amd64 i386 mips64 mips64el powerpc sparc sparc64
 
@@ -6,7 +6,7 @@ COMMENT =		ANSI/200x Forth interpreter and compiler
 
 V =			0.7.3
 DISTNAME =		gforth-${V}
-REVISION =		0
+REVISION =		1
 CATEGORIES =		lang
 
 HOMEPAGE =		http://www.gnu.org/software/gforth/
@@ -21,13 +21,12 @@ MASTER_SITES =		${MASTER_SITE_GNU:=gforth/}
 WANTLIB += avcall c callback ffi ltdl m pthread
 
 LIB_DEPENDS =		devel/ffcall \
-			devel/libffi \
+			devel/libffi>=3.2.1p0 \
 			devel/libtool,-ltdl
 
-# XXX: -pthread is added here while libffi.pc doesn't advocate it
 CONFIGURE_STYLE =	gnu
 CONFIGURE_ENV =		CPPFLAGS="-I/usr/local/include" \
-			LDFLAGS="-L/usr/local/lib -pthread"
+			LDFLAGS="-L/usr/local/lib"
 
 CFLAGS +=		-Dunix
 FAKE_FLAGS+=		DESTDIR="${WRKINST}"
