--- a/databases/redis/Makefile
+++ b/databases/redis/Makefile
@@ -1,7 +1,8 @@
-# $OpenBSD: Makefile,v 1.87 2016/01/28 09:45:46 dcoppa Exp $
+# $OpenBSD: Makefile,v 1.88 2016/01/28 15:56:28 dcoppa Exp $
 
 COMMENT =		persistent key-value database
 DISTNAME =		redis-3.0.7
+REVISION =		0
 CATEGORIES =		databases
 HOMEPAGE =		http://redis.io/
 
