--- a/security/openssl/Makefile
+++ b/security/openssl/Makefile
@@ -1,8 +1,9 @@
-# $OpenBSD: Makefile,v 1.14 2016/01/28 15:51:38 sthen Exp $
+# $OpenBSD: Makefile,v 1.15 2016/01/28 22:50:59 sthen Exp $
 
 COMMENT=	TLS/SSL library and tools
 
 V=		1.0.2f
+REVISION=	0
 DISTNAME=	openssl-$V
 PKGNAME=	openssl-$V
 
