--- a/www/iridium/Makefile
+++ b/www/iridium/Makefile
@@ -1,4 +1,4 @@
-# $OpenBSD: Makefile,v 1.41 2016/02/15 18:07:52 robert Exp $
+# $OpenBSD: Makefile,v 1.42 2016/02/15 18:09:04 robert Exp $
 
 ONLY_FOR_ARCHS=		i386 amd64
 DPB_PROPERTIES=		parallel
@@ -181,14 +181,14 @@ do-configure:
 do-build:
 	# Build all the resources as the first step to avoid build failures
 	# due to internal dependency issues.
-#	@cd ${WRKSRC}/out/${BUILDTYPE} && \
-#	for _r in generate_version_info cloud_policy_proto net_interfaces suggestions \
-#	cacheinvalidation cacheinvalidation_proto_cpp gfx_vector_icons \
-#	data_reduction_proxy_proto cloud_policy_code_generate \
-#	$$(ninja -t targets | grep -E '(mojo_bindings|resources): phony' | grep -v test | cut -d ':' -f1); do \
-#		cd ${WRKSRC} && env -i ${MAKE_ENV} ninja \
-#			-j ${MAKE_JOBS} -C out/${BUILDTYPE} $${_r}; \
-#	done
+	@cd ${WRKSRC}/out/${BUILDTYPE} && \
+	for _r in generate_version_info cloud_policy_proto net_interfaces suggestions \
+	cacheinvalidation cacheinvalidation_proto_cpp gfx_vector_icons \
+	data_reduction_proxy_proto cloud_policy_code_generate \
+	$$(ninja -t targets | grep -E '(mojo_bindings|resources): phony' | grep -v test | cut -d ':' -f1); do \
+		cd ${WRKSRC} && env -i ${MAKE_ENV} ninja \
+			-j ${MAKE_JOBS} -C out/${BUILDTYPE} $${_r}; \
+	done
 	@cd ${WRKSRC} && env -i ${MAKE_ENV} ninja \
 		-j ${MAKE_JOBS} -C out/${BUILDTYPE} ${ALL_TARGET}
 
