--- a/telephony/stuntman/Makefile
+++ b/telephony/stuntman/Makefile
@@ -1,7 +1,7 @@
-# $OpenBSD: Makefile,v 1.9 2016/02/21 11:45:25 jsg Exp $
+# $OpenBSD: Makefile,v 1.10 2016/02/21 16:17:26 jsg Exp $
 
 COMMENT =	STUN server implementing RFCs 5389, 5769, and 5780
-NOT_FOR_ARCHS = hppa # atomic ops
+NOT_FOR_ARCHS = arm hppa # atomic ops
 
 VERSION =	1.2.7
 DISTNAME =	stunserver-${VERSION}
