--- a/mail/rspamd/Makefile
+++ b/mail/rspamd/Makefile
@@ -1,4 +1,4 @@
-# $OpenBSD: Makefile,v 1.13 2016/02/25 16:04:54 landry Exp $
+# $OpenBSD: Makefile,v 1.14 2016/02/25 20:24:55 sthen Exp $
 
 SHARED_ONLY=	Yes
 
@@ -12,7 +12,7 @@ CATEGORIES=	mail
 
 HOMEPAGE=	https://rspamd.com/
 
-# BSD
+# Apache License 2.0
 PERMIT_PACKAGE_CDROM=	Yes
 
 WANTLIB += c crypto event gio-2.0 glib-2.0 gmime-2.6 gobject-2.0
