--- a/geo/openbsd-developers/Makefile
+++ b/geo/openbsd-developers/Makefile
@@ -1,10 +1,11 @@
-# $OpenBSD: Makefile,v 1.131 2016/02/27 16:33:56 landry Exp $
+# $OpenBSD: Makefile,v 1.132 2016/02/27 17:09:40 phessler Exp $
 
 CATEGORIES=		geo
 COMMENT=		geographic location of past and present OpenBSD developers
 
 DISTNAME=		openbsd-developers-2.0
-REVISION=
+REVISION=		0
+
 DISTFILES=
 HOMEPAGE=		http://www.openbsd.org/
 
