--- a/devel/quirks/Makefile
+++ b/devel/quirks/Makefile
@@ -1,11 +1,11 @@
-# $OpenBSD: Makefile,v 1.352 2016/02/04 12:34:48 sthen Exp $
+# $OpenBSD: Makefile,v 1.353 2016/03/01 15:21:56 jasper Exp $
 
 COMMENT =	exceptions to pkg_add rules
 CATEGORIES =	devel databases
 DISTFILES =
 
 # API.rev
-PKGNAME =	quirks-2.197
+PKGNAME =	quirks-2.198
 PKG_ARCH =	*
 MAINTAINER =	Marc Espie <espie@openbsd.org>
 
