--- a/net/corebird/Makefile
+++ b/net/corebird/Makefile
@@ -1,4 +1,4 @@
-# $OpenBSD: Makefile,v 1.2 2016/03/03 14:21:07 kili Exp $
+# $OpenBSD: Makefile,v 1.3 2016/03/03 15:55:08 kili Exp $
 
 COMMENT =		native Gtk+ Twitter client
 
@@ -48,7 +48,8 @@ LIB_DEPENDS =		devel/json-glib \
 			x11/gtk+3
 
 BUILD_DEPENDS +=	${MODGNU_AUTOCONF_DEPENDS} \
-			${MODGNU_AUTOMAKE_DEPENDS}
+			${MODGNU_AUTOMAKE_DEPENDS} \
+			devel/libtool
 
 RUN_DEPENDS =		multimedia/gstreamer1/plugins-bad \
 			multimedia/gstreamer1/plugins-good \
@@ -56,7 +57,6 @@ RUN_DEPENDS =		multimedia/gstreamer1/plugins-bad \
 
 CONFIGURE_STYLE =	gnu
 USE_GMAKE =		Yes
-USE_LIBTOOL =		gnu
 
 pre-configure:
 	cd ${WRKSRC} && \
