--- a/net/librenms/Makefile
+++ b/net/librenms/Makefile
@@ -1,8 +1,9 @@
-# $OpenBSD: Makefile,v 1.24 2016/03/07 16:43:03 sthen Exp $
+# $OpenBSD: Makefile,v 1.25 2016/03/07 17:49:10 sthen Exp $
 
 COMMENT =	auto-discovering network management/monitoring system
 
 V =		201603
+REVISION =	0
 DISTNAME =	librenms-$V
 DISTFILES =	librenms-$V{$V}.tar.gz
 
