--- a/security/oletools/Makefile
+++ b/security/oletools/Makefile
@@ -1,8 +1,8 @@
-# $OpenBSD: Makefile,v 1.1.1.1 2016/03/01 18:22:38 rpointel Exp $
+# $OpenBSD: Makefile,v 1.2 2016/03/07 18:45:54 rpointel Exp $
 
 COMMENT =	python tools to analyze OLE files
 
-MODPY_EGG_VERSION = 0.42.1
+MODPY_EGG_VERSION = 0.43
 DISTNAME =	oletools-${MODPY_EGG_VERSION}
 
 CATEGORIES =	security
@@ -14,7 +14,7 @@ MAINTAINER =	Remi Pointel <rpointel@openbsd.org>
 # BSD (apart from the thirdparty folder which contains third-party files published with their own license.)
 PERMIT_PACKAGE_CDROM =	Yes
 
-MODPY_PI = 	Yes
+MASTER_SITES =	https://bitbucket.org/decalage/oletools/downloads/
 
 MODULES =	lang/python
 
@@ -23,7 +23,7 @@ RUN_DEPENDS +=	${MODPY_TKINTER_DEPENDS}
 MODPY_ADJ_FILES = oletools/*.py
 
 post-install:
-.for i in olebrowse oleid olemeta oletimes olevba pyxswf rtfobj
+.for i in olebrowse oleid olemeta oletimes olevba pyxswf rtfobj oledir olemap
 	chmod +x ${PREFIX}/lib/python${MODPY_VERSION}/site-packages/oletools/${i}.py
 	ln -s ${TRUEPREFIX}/lib/python${MODPY_VERSION}/site-packages/oletools/${i}.py ${PREFIX}/bin/${i}
 .endfor
