--- a/www/iridium/Makefile
+++ b/www/iridium/Makefile
@@ -1,4 +1,4 @@
-# $OpenBSD: Makefile,v 1.45 2016/03/05 16:04:06 pascal Exp $
+# $OpenBSD: Makefile,v 1.46 2016/03/09 13:18:10 naddy Exp $
 
 ONLY_FOR_ARCHS=		i386 amd64
 DPB_PROPERTIES=		parallel
@@ -8,7 +8,7 @@ COMMENT=		Iridium browser
 V=			48.2
 DISTNAME=		iridium-browser-${V}
 PKGNAME=		iridium-${V}
-REVISION=		0
+REVISION=		1
 
 WRKDIST=		${WRKDIR}/${DISTNAME:S/rc1//}
 
@@ -63,7 +63,7 @@ WANTLIB += atk-1.0 gmodule-2.0
 
 RUN_DEPENDS=	devel/xdg-utils \
 		devel/desktop-file-utils \
-		fonts/droid-fonts \
+		fonts/noto-fonts \
 		graphics/libexif \
 		x11/gnome/libgnome-keyring \
 		x11/gtk+3,-guic
