--- a/editors/libreoffice/Makefile
+++ b/editors/libreoffice/Makefile
@@ -1,4 +1,4 @@
-# $OpenBSD: Makefile,v 1.142 2016/03/03 10:17:38 robert Exp $
+# $OpenBSD: Makefile,v 1.143 2016/03/13 10:31:16 robert Exp $
 
 ONLY_FOR_ARCHS= amd64 i386
 
@@ -7,7 +7,7 @@ COMMENT-kde=	optional integration of LibreOffice to the KDE environment
 COMMENT-java=	optional integration of LibreOffice java features
 
 BV=		5.1
-VERSION=	${BV}.0.3
+VERSION=	${BV}.1.3
 DISTNAME=	libreoffice-${VERSION}
 DISTNAME=	libreoffice-${VERSION}
 WRKDIST=	${WRKDIR}/libreoffice-${VERSION}
@@ -92,7 +92,7 @@ DISTFILES+=	${EDISTFILES} \
 		edc4d741888bc0d38e32dbaa17149596-source-sans-pro-2.010R-ro-1.065R-it.tar.gz:0 \
 		eeb2c7ddf0d302fba4bfc6e97eac9624-libbase-1.1.6.zip:0 \
 		f94d9870737518e3b597f9265f4e9803-libserializer-1.1.6.zip:0 \
-		5c0c9ac0996fbb4a0e17780ff5441959-graphite2-minimal-1.3.4.tgz:0 \
+		17df8301bcc459e83f8a8f3aca6183b2-graphite-minimal-1.3.6.tgz:0 \
 		libabw-0.1.1.tar.bz2:0 \
 		libcdr-0.1.2.tar.bz2:0 \
 		libe-book-0.1.2.tar.bz2:0 \
